# marketkit

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  index.md  roadmap.md  tech-plan.md
examples/: quickstart.ipynb
src/marketkit/: __init__.py  accessor.py  cache.py  clean.py  cli.py  config.py  errors.py  fetch.py  plot.py  report.py  screen.py  signals.py  summary.py  ticker.py
src/marketkit/analytics/: indicators.py  returns.py  risk.py  stats.py
src/marketkit/sources/: __init__.py  base.py  stooq.py  yahoo.py
tests/: conftest.py  test_accessor.py  test_analytics.py  test_cache.py  test_clean.py  test_cli.py  test_fetch.py  test_indicators_extra.py  test_plot.py  test_report.py  test_resample.py  test_screen.py  test_signals.py  test_sources.py  test_stats_risk.py  test_summary.py  test_ticker.py
