[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketkit"
dynamic = ["version"]
description = "Reliable, clean market data and basic analytics — pure Python, no C dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Aditya Agrawal", email = "aditya33agrawal@gmail.com" }]
keywords = ["finance", "stocks", "market-data", "ohlcv", "technical-analysis", "trading"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Office/Business :: Financial :: Investment",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "pandas>=1.5",
  "requests>=2.28",
  "pyarrow>=12",
  "platformdirs>=3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
plotly = ["plotly>=5"]
stats = ["scipy>=1.9"]
all = ["marketkit[plot,plotly,stats]"]
dev = ["pytest", "pytest-cov", "responses", "ruff", "mypy", "build", "twine", "marketkit[all]"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
marketkit = "marketkit.cli:main"

[project.urls]
Homepage = "https://github.com/aditya33agrawal/marketkit"
Documentation = "https://aditya33agrawal.github.io/marketkit"
Issues = "https://github.com/aditya33agrawal/marketkit/issues"

[tool.hatch.version]
path = "src/marketkit/_version.py"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "platformdirs", "requests", "matplotlib.*", "plotly.*"]
ignore_missing_imports = true
